# tap-redshift

./: Pipfile  README.rst  pyproject.toml  setup.py
.github/workflows/: veracode-static-scan.yml
tap_redshift/: __init__.py  resolve.py
