[tool.poetry]
name = "tap-redshift"
version = "1.0.3"
description = "Singer.io tap for extracting data from redshift"
authors = ["data.world"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "~3.7"
attrs = "18.2.0"
pendulum = "1.2.0"
singer-python = "5.0.4"
backoff = "1.3.2"
psycopg2-binary = "2.9.3"
pytz = "2021.3"

[tool.poetry.dev-dependencies]
pytest-runner = ">=2.11,<3.0a"
pytest-mock = ">=1.6.3"
mock = ">=2.0.0"
coverage = "4.5.1"
doublex = ">=1.8.4,<2.0a"
flake8 = ">=2.6.0,<3.4.1a"
pyhamcrest = ">=1.9.0,<2.0a"
pytest = ">=3.2.3,<4.0a"

[tool.poetry.scripts]
tap-redshift = "tap_redshift:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
